use crate::handlers::callback::MessageBuilder;
use crate::proto::callback::v1::callback::Query;
use crate::proto::callback::v1::update_category::Field;
use crate::proto::callback::v1::{
    Callback, CategoryDirection, CreateCategory, DeleteCategory, ShowCategoriesSettings,
    ShowCategorySettings, ShowSettings, UpdateCategory,
};
use crate::services;
use std::sync::Arc;
use teloxide::prelude::CallbackQuery;
use teloxide::types::{InlineKeyboardButton, InlineKeyboardMarkup};

pub struct CreateCategoryMessageBuilder {}

impl CreateCategoryMessageBuilder {
    pub fn new() -> Self {
        CreateCategoryMessageBuilder {}
    }
}

#[async_trait::async_trait]
impl MessageBuilder for CreateCategoryMessageBuilder {
    async fn text(&self) -> String {
        "".to_string()
    }

    async fn reply_markup(&self) -> InlineKeyboardMarkup {
        InlineKeyboardMarkup::default()
    }
}

pub struct ShowCategoriesSettingsMessageBuilder {
    callback_query: CallbackQuery,
    service: Arc<dyn services::categories::Service>,
    query: ShowCategoriesSettings,
}

impl ShowCategoriesSettingsMessageBuilder {
    pub fn new(
        callback_query: CallbackQuery,
        service: Arc<dyn services::categories::Service>,
        query: ShowCategoriesSettings,
    ) -> Self {
        Self {
            callback_query,
            service,
            query,
        }
    }
}

#[async_trait::async_trait]
impl MessageBuilder for ShowCategoriesSettingsMessageBuilder {
    async fn text(&self) -> String {
        let (icon, text) = match CategoryDirection::try_from(self.query.category_direction).ok() {
            Some(CategoryDirection::Expense) => ("üìâ", "—Ä–∞—Å—Ö–æ–¥–æ–≤"),
            Some(CategoryDirection::Income) => ("üìà", "–¥–æ—Ö–æ–¥–æ–≤"),
            _ => ("", ""),
        };
        format!("{icon} –í—ã–±–µ—Ä–∏—Ç–µ –∫–∞—Ç–µ–≥–æ—Ä–∏—é {text}",)
    }

    async fn reply_markup(&self) -> InlineKeyboardMarkup {
        let list = self
            .service
            .select_categories(
                self.callback_query.regular_message().unwrap().chat.id.0,
                CategoryDirection::try_from(self.query.category_direction).unwrap(),
            )
            .await
            .unwrap();

        let mut reply_markup = InlineKeyboardMarkup::default();

        const PAGE_SIZE: usize = 6;

        for cats in list.chunks(if list.len() > PAGE_SIZE { 2 } else { 1 }) {
            let row: Vec<InlineKeyboardButton> = cats
                .iter()
                .map(|category| {
                    InlineKeyboardButton::callback(
                        format!("{} {}", category.label, category.name),
                        String::try_from(Callback {
                            query: Option::from(Query::ShowCategorySettings(
                                ShowCategorySettings {
                                    category_id: category.id,
                                    navigation_from: Option::from(self.query),
                                },
                            )),
                        })
                        .unwrap(),
                    )
                })
                .collect();

            reply_markup = reply_markup.append_row(row);
        }

        reply_markup.append_row(vec![
            InlineKeyboardButton::callback(
                "‚ûï –î–æ–±–∞–≤–∏—Ç—å",
                String::try_from(Callback {
                    query: Option::from(Query::CreateCategory(CreateCategory {
                        category_direction: self.query.category_direction,
                    })),
                })
                .unwrap(),
            ),
            InlineKeyboardButton::callback(
                "üîô –ù–∞–∑–∞–¥",
                String::try_from(Callback {
                    query: Option::from(Query::ShowSettings(ShowSettings {})),
                })
                .unwrap(),
            ),
        ])
    }
}

pub struct ShowCategorySettingsMessageBuilder {
    callback_query: CallbackQuery,
    service: Arc<dyn services::categories::Service>,
    query: ShowCategorySettings,
}

impl ShowCategorySettingsMessageBuilder {
    pub fn new(
        callback_query: CallbackQuery,
        service: Arc<dyn services::categories::Service>,
        query: ShowCategorySettings,
    ) -> Self {
        Self {
            callback_query,
            service,
            query,
        }
    }
}

#[async_trait::async_trait]
impl MessageBuilder for ShowCategorySettingsMessageBuilder {
    async fn text(&self) -> String {
        let category = self
            .service
            .get_category(
                self.callback_query.regular_message().unwrap().chat.id.0,
                self.query.category_id,
            )
            .await
            .unwrap();

        let name = category.name;
        let label = category.label;
        let (direction, target_limit_title, is_regular_title, target_limit) =
            match category.direction {
                CategoryDirection::Expense => (
                    "–†–∞—Å—Ö–æ–¥ üìâ",
                    "–õ–∏–º–∏—Ç",
                    "—Ä–∞—Å—Ö–æ–¥",
                    match category.target_amount {
                        Some(amount) => {
                            format!("{}", amount)
                        }
                        None => "_–ë–µ–∑ –æ–≥—Ä–∞–Ω–∏—á–µ–Ω–∏–π_".to_owned(),
                    },
                ),
                CategoryDirection::Income => (
                    "–î–æ—Ö–æ–¥ üìà",
                    "–ü–ª–∞–Ω",
                    "–¥–æ—Ö–æ–¥",
                    match category.target_amount {
                        Some(amount) => {
                            format!("{}", amount)
                        }
                        None => "_–ù–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω_".to_owned(),
                    },
                ),
                CategoryDirection::Unspecified => {
                    unreachable!()
                }
            };

        let is_regular = if category.is_regular {
            "_–î–∞_"
        } else {
            "_–ù–µ—Ç_"
        };

        format!(
            "‚öôÔ∏è *–ù–∞—Å—Ç—Ä–æ–π–∫–∏ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏*
*–ù–∞–∑–≤–∞–Ω–∏–µ:* {name}
*–Ø—Ä–ª—ã–∫:* {label}
*–¢–∏–ø:* {direction}
*{target_limit_title}:* {target_limit}
*–ü–æ—Å—Ç–æ—è–Ω–Ω—ã–π {is_regular_title}:* {is_regular}",
        )
    }

    async fn reply_markup(&self) -> InlineKeyboardMarkup {
        let category = self
            .service
            .get_category(
                self.callback_query.regular_message().unwrap().chat.id.0,
                self.query.category_id,
            )
            .await
            .unwrap();

        InlineKeyboardMarkup::default()
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "‚úè –ò–∑–º–µ–Ω–∏—Ç—å –Ω–∞–∑–≤–∞–Ω–∏–µ",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.query.category_id,
                            field: i32::from(Field::Name),
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    "üè∑ –ò–∑–º–µ–Ω–∏—Ç—å —è—Ä–ª—ã–∫",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.query.category_id,
                            field: i32::from(Field::Label),
                        })),
                    })
                    .unwrap(),
                ),
            ])
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "üîÑ –ò–∑–º–µ–Ω–∏—Ç—å —Ç–∏–ø",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.query.category_id,
                            field: i32::from(Field::Direction),
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    format!(
                        "üéØ –ò–∑–º–µ–Ω–∏—Ç—å {}",
                        match category.direction {
                            CategoryDirection::Expense => {
                                "–ª–∏–º–∏—Ç"
                            }
                            CategoryDirection::Income => {
                                "–ø–ª–∞–Ω"
                            }
                            CategoryDirection::Unspecified => {
                                unreachable!()
                            }
                        }
                    ),
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.query.category_id,
                            field: i32::from(Field::TargetAmount),
                        })),
                    })
                    .unwrap(),
                ),
            ])
            .append_row(vec![InlineKeyboardButton::callback(
                "üìÖ –ò–∑–º–µ–Ω–∏—Ç—å —Ä–µ–≥—É–ª—è—Ä–Ω–æ—Å—Ç—å",
                String::try_from(Callback {
                    query: Option::from(Query::UpdateCategory(UpdateCategory {
                        category_id: self.query.category_id,
                        field: i32::from(Field::IsRegular),
                    })),
                })
                .unwrap(),
            )])
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "‚ùå –£–¥–∞–ª–∏—Ç—å",
                    String::try_from(Callback {
                        query: Option::from(Query::DeleteCategory(DeleteCategory {
                            category_id: self.query.category_id,
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    "üîô –ù–∞–∑–∞–¥",
                    String::try_from(Callback {
                        query: Option::from(Query::ShowCategoriesSettings(
                            self.query.navigation_from.unwrap(),
                        )),
                    })
                    .unwrap(),
                ),
            ])
    }
}

pub struct UpdateCategoryMessageBuilder {
    callback_query: CallbackQuery,
    service: Arc<dyn services::categories::Service>,
    query: UpdateCategory,
}

impl UpdateCategoryMessageBuilder {
    pub fn new(
        callback_query: CallbackQuery,
        service: Arc<dyn services::categories::Service>,
        query: UpdateCategory,
    ) -> Self {
        Self {
            callback_query,
            service,
            query,
        }
    }
}

#[async_trait::async_trait]
impl MessageBuilder for UpdateCategoryMessageBuilder {
    async fn text(&self) -> String {
        let category = self
            .service
            .get_category(
                self.callback_query.regular_message().unwrap().chat.id.0,
                self.query.category_id,
            )
            .await
            .unwrap();

        match Field::try_from(self.query.field).ok() {
            Some(Field::Name) => format!(
                "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –Ω–∞–∑–≤–∞–Ω–∏—è –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ {} {}*

¬´*{}*¬ª ‚Üí _–ù–æ–≤–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ_

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏\\._",
                category.label,
                category.name,
                category.name
            ),
            Some(Field::Label) => format!(
                "üè∑ *–ò–∑–º–µ–Ω–µ–Ω–∏–µ —è—Ä–ª—ã–∫–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ {} {}*

¬´{}¬ª ‚Üí _–ù–æ–≤—ã–π —è—Ä–ª—ã–∫_

–û—Ç–ø—Ä–∞–≤—å—Ç–µ –Ω–æ–≤—ã–π —Å–∏–º–≤–æ–ª \\(–Ω–∞–ø—Ä–∏–º–µ—Ä, üõí, üçé, üè∑Ô∏è\\)\\.",
                category.label,
                category.name,
                category.label
            ),
            Some(Field::Direction) => "todo".to_string(),
            Some(Field::IsRegular) => "todo".to_string(),
            Some(Field::TargetAmount) => match category.direction {
                CategoryDirection::Expense => format!(
                    "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –ª–∏–º–∏—Ç–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ {} {}*

¬´*{:?}*¬ª ‚Üí _–ù–æ–≤—ã–π –ª–∏–º–∏—Ç_

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤—É—é —Å—É–º–º—É \\(–∏–ª–∏ ¬´0¬ª –¥–ª—è —É–¥–∞–ª–µ–Ω–∏—è –ª–∏–º–∏—Ç–∞\\)\\._",
                    category.label,
                    category.name,
                    category.target_amount.unwrap_or(0),
                ),
                CategoryDirection::Income => format!(
                    "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –ø–ª–∞–Ω–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ {} {}*

¬´*{:?}*¬ª ‚Üí _–ù–æ–≤—ã–π –ø–ª–∞–Ω_

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤—É—é —Ü–µ–ª–µ–≤—É—é —Å—É–º–º—É \\(–∏–ª–∏ ¬´0¬ª –¥–ª—è —É–¥–∞–ª–µ–Ω–∏—è –ø–ª–∞–Ω–∞\\)\\._",
                    category.label,
                    category.name,
                    category.target_amount.unwrap_or(0),
                ),
                CategoryDirection::Unspecified => {
                    unreachable!()
                }
            },
            _ => {
                unreachable!()
            }
        }
    }

    async fn reply_markup(&self) -> InlineKeyboardMarkup {
        InlineKeyboardMarkup::default()
    }
}
