use crate::handlers::callback;
use crate::proto::callback::v1::callback::Query;
use crate::proto::callback::v1::{
    Callback, CancelCreateCategory, CategoryDirection, CreateCategory, ShowCategoriesSettings,
    ShowCategorySettings,
};
use teloxide::types::{InlineKeyboardButton, InlineKeyboardMarkup};

pub struct MessageBuilder {
    callback: CreateCategory,
}

impl MessageBuilder {
    pub fn new(callback: CreateCategory) -> Self {
        MessageBuilder { callback }
    }
}

#[async_trait::async_trait]
impl callback::MessageBuilder for MessageBuilder {
    async fn text(&self) -> Result<String, Box<dyn std::error::Error + Send + Sync>> {
        match CategoryDirection::try_from(self.callback.category_direction)? {
            CategoryDirection::Expense => {
                Ok("üìâ –í–≤–µ–¥–∏—Ç–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –Ω–æ–≤–æ–π –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ —Ä–∞—Å—Ö–æ–¥–æ–≤ –∏ –µ–∂–µ–º–µ—Å—è—á–Ω—ã–π –ª–∏–º–∏—Ç –ø–æ –Ω–µ–π, –∏—Å–ø–æ–ª—å–∑—É—è —Å–ª–µ–¥—É—é—â–∏–π —Ñ–æ—Ä–º–∞—Ç:

üíº –ó–∞—Ä–ø–ª–∞—Ç–∞ \\- 500 000".to_string())
            }
            CategoryDirection::Income => {
                Ok("üìà –í–≤–µ–¥–∏—Ç–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –Ω–æ–≤–æ–π –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ –¥–æ—Ö–æ–¥–æ–≤ –∏ –µ–∂–µ–º–µ—Å—è—á–Ω—É—é –ø–ª–∞–Ω–æ–≤—É—é —Å—É–º–º—É –¥–ª—è –Ω–µ—ë, –∏—Å–ø–æ–ª—å–∑—É—è —Å–ª–µ–¥—É—é—â–∏–π —Ñ–æ—Ä–º–∞—Ç:

üçé –§—Ä—É–∫—Ç—ã \\- 300".to_string())
            }
            CategoryDirection::Unspecified => {
                unreachable!()
            }
        }
    }

    async fn reply_markup(
        &self,
    ) -> Result<InlineKeyboardMarkup, Box<dyn std::error::Error + Send + Sync>> {
        Ok(
            InlineKeyboardMarkup::default().append_row(vec![InlineKeyboardButton::callback(
                "‚ùå –û—Ç–º–µ–Ω–∏—Ç—å",
                String::try_from(Callback {
                    query: Option::from(Query::CancelCreateCategory(CancelCreateCategory {})),
                })
                .unwrap(),
            )]),
        )
    }
}

pub struct CancellableMessageBuilder {
    callback: CreateCategory,
}

impl CancellableMessageBuilder {
    pub fn new(callback: CreateCategory) -> Self {
        CancellableMessageBuilder { callback }
    }
}

#[async_trait::async_trait]
impl callback::CancellableMessageBuilder for CancellableMessageBuilder {
    async fn text(&self) -> Result<String, Box<dyn std::error::Error + Send + Sync>> {
        match CategoryDirection::try_from(self.callback.category_direction)? {
            CategoryDirection::Expense => {
                Ok("‚ö†Ô∏è –°–æ–∑–¥–∞–Ω–∏–µ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ —Ä–∞—Å—Ö–æ–¥–æ–≤ –æ—Ç–º–µ–Ω–µ–Ω–æ.".to_string())
            }
            CategoryDirection::Income => Ok("‚ö†Ô∏è –°–æ–∑–¥–∞–Ω–∏–µ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ –¥–æ—Ö–æ–¥–æ–≤ –æ—Ç–º–µ–Ω–µ–Ω–æ.".to_string()),
            CategoryDirection::Unspecified => unreachable!(),
        }
    }

    async fn reply_markup(
        &self,
    ) -> Result<InlineKeyboardMarkup, Box<dyn std::error::Error + Send + Sync>> {
        Ok(
            InlineKeyboardMarkup::default().append_row(vec![InlineKeyboardButton::callback(
                "üîô –ö –Ω–∞—Å—Ç—Ä–æ–π–∫–∞–º –∫–∞—Ç–µ–≥–æ—Ä–∏–π",
                String::try_from(Callback {
                    query: Option::from(Query::ShowCategoriesSettings(ShowCategoriesSettings {
                        category_direction: self.callback.category_direction,
                    })),
                })
                .unwrap(),
            )]),
        )
    }
}
