use crate::handlers::callback;
use crate::proto::callback::v1::callback::Query;
use crate::proto::callback::v1::update_category::Field;
use crate::proto::callback::v1::{
    Callback, CategoryDirection, DeleteCategory, ShowCategorySettings, UpdateCategory,
};
use crate::services;
use std::sync::Arc;
use teloxide::prelude::{CallbackQuery, Message};
use teloxide::types::{InlineKeyboardButton, InlineKeyboardMarkup};

pub struct MessageBuilder {
    message: Message,
    service: Arc<dyn services::categories::Service>,
    callback: ShowCategorySettings,
}

impl MessageBuilder {
    pub fn new(
        message: Message,
        service: Arc<dyn services::categories::Service>,
        callback: ShowCategorySettings,
    ) -> Self {
        Self {
            message,
            service,
            callback,
        }
    }
}

#[async_trait::async_trait]
impl callback::MessageBuilder for MessageBuilder {
    async fn text(&self) -> Result<String, Box<dyn std::error::Error + Send + Sync>> {
        let category = self
            .service
            .get_category(self.message.chat.id.0, self.callback.category_id)
            .await?;

        let name = category.name;
        let label = category.label;
        let (direction, target_limit_title, is_regular_title, target_limit) =
            match category.direction {
                CategoryDirection::Expense => (
                    "–†–∞—Å—Ö–æ–¥ üìâ",
                    "–õ–∏–º–∏—Ç",
                    "—Ä–∞—Å—Ö–æ–¥",
                    match category.target_amount {
                        Some(amount) => {
                            format!("{}", amount)
                        }
                        None => "_–ë–µ–∑ –æ–≥—Ä–∞–Ω–∏—á–µ–Ω–∏–π_".to_owned(),
                    },
                ),
                CategoryDirection::Income => (
                    "–î–æ—Ö–æ–¥ üìà",
                    "–ü–ª–∞–Ω",
                    "–¥–æ—Ö–æ–¥",
                    match category.target_amount {
                        Some(amount) => {
                            format!("{}", amount)
                        }
                        None => "_–ù–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω_".to_owned(),
                    },
                ),
                CategoryDirection::Unspecified => {
                    unreachable!()
                }
            };

        let is_regular = if category.is_regular {
            "_–î–∞_"
        } else {
            "_–ù–µ—Ç_"
        };

        Ok(format!(
            "‚öôÔ∏è *–ù–∞—Å—Ç—Ä–æ–π–∫–∏ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏*
*–ù–∞–∑–≤–∞–Ω–∏–µ:* {name}
*–Ø—Ä–ª—ã–∫:* {label}
*–¢–∏–ø:* {direction}
*{target_limit_title}:* {target_limit}
*–ü–æ—Å—Ç–æ—è–Ω–Ω—ã–π {is_regular_title}:* {is_regular}",
        ))
    }

    async fn reply_markup(
        &self,
    ) -> Result<InlineKeyboardMarkup, Box<dyn std::error::Error + Send + Sync>> {
        let category = self
            .service
            .get_category(self.message.chat.id.0, self.callback.category_id)
            .await
            .unwrap();

        Ok(InlineKeyboardMarkup::default()
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "‚úè –ò–∑–º–µ–Ω–∏—Ç—å –Ω–∞–∑–≤–∞–Ω–∏–µ",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.callback.category_id,
                            field: i32::from(Field::Name),
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    "üè∑ –ò–∑–º–µ–Ω–∏—Ç—å —è—Ä–ª—ã–∫",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.callback.category_id,
                            field: i32::from(Field::Label),
                        })),
                    })
                    .unwrap(),
                ),
            ])
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "üîÑ –ò–∑–º–µ–Ω–∏—Ç—å —Ç–∏–ø",
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.callback.category_id,
                            field: i32::from(Field::Direction),
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    format!(
                        "üéØ –ò–∑–º–µ–Ω–∏—Ç—å {}",
                        match category.direction {
                            CategoryDirection::Expense => {
                                "–ª–∏–º–∏—Ç"
                            }
                            CategoryDirection::Income => {
                                "–ø–ª–∞–Ω"
                            }
                            CategoryDirection::Unspecified => {
                                unreachable!()
                            }
                        }
                    ),
                    String::try_from(Callback {
                        query: Option::from(Query::UpdateCategory(UpdateCategory {
                            category_id: self.callback.category_id,
                            field: i32::from(Field::TargetAmount),
                        })),
                    })
                    .unwrap(),
                ),
            ])
            .append_row(vec![InlineKeyboardButton::callback(
                "üìÖ –ò–∑–º–µ–Ω–∏—Ç—å —Ä–µ–≥—É–ª—è—Ä–Ω–æ—Å—Ç—å",
                String::try_from(Callback {
                    query: Option::from(Query::UpdateCategory(UpdateCategory {
                        category_id: self.callback.category_id,
                        field: i32::from(Field::IsRegular),
                    })),
                })
                .unwrap(),
            )])
            .append_row(vec![
                InlineKeyboardButton::callback(
                    "‚ùå –£–¥–∞–ª–∏—Ç—å",
                    String::try_from(Callback {
                        query: Option::from(Query::DeleteCategory(DeleteCategory {
                            category_id: self.callback.category_id,
                        })),
                    })
                    .unwrap(),
                ),
                InlineKeyboardButton::callback(
                    "üîô –ù–∞–∑–∞–¥",
                    String::try_from(Callback {
                        query: Option::from(Query::ShowCategoriesSettings(
                            self.callback.navigated_from.unwrap(),
                        )),
                    })
                    .unwrap(),
                ),
            ]))
    }
}
