use crate::handlers::callback;
use crate::proto::callback::v1::callback::Query;
use crate::proto::callback::v1::update_category::Field;
use crate::proto::callback::v1::{
    Callback, CancelUpdateCategory, CategoryDirection, UpdateCategory,
};
use crate::services;
use std::sync::Arc;
use teloxide::prelude::CallbackQuery;
use teloxide::types::{InlineKeyboardButton, InlineKeyboardMarkup};

pub struct MessageBuilder {
    callback_query: CallbackQuery,
    service: Arc<dyn services::categories::Service>,
    query: UpdateCategory,
}

impl MessageBuilder {
    pub fn new(
        callback_query: CallbackQuery,
        service: Arc<dyn services::categories::Service>,
        query: UpdateCategory,
    ) -> Self {
        Self {
            callback_query,
            service,
            query,
        }
    }
}

#[async_trait::async_trait]
impl callback::MessageBuilder for MessageBuilder {
    async fn text(&self) -> Result<String, Box<dyn std::error::Error + Send + Sync>> {
        let category = self
            .service
            .get_category(
                self.callback_query.regular_message().unwrap().chat.id.0,
                self.query.category_id,
            )
            .await?;

        Ok(match Field::try_from(self.query.field).ok() {
            Some(Field::Name) => format!(
                "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –Ω–∞–∑–≤–∞–Ω–∏—è –∫–∞—Ç–µ–≥–æ—Ä–∏–∏: {} {}*

*–¢–µ–∫—É—â–µ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ:* {}

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏\\._",
                category.label, category.name, category.name
            ),
            Some(Field::Label) => format!(
                "üè∑ *–ò–∑–º–µ–Ω–µ–Ω–∏–µ —è—Ä–ª—ã–∫–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏: {} {}*

*–¢–µ–∫—É—â–∏–π —è—Ä–ª—ã–∫:* {}

–û—Ç–ø—Ä–∞–≤—å—Ç–µ –Ω–æ–≤—ã–π —Å–∏–º–≤–æ–ª \\(–Ω–∞–ø—Ä–∏–º–µ—Ä, üõí, üçé, üè∑Ô∏è\\)\\.",
                category.label, category.name, category.label
            ),
            Some(Field::Direction) => "todo".to_string(),
            Some(Field::IsRegular) => "todo".to_string(),
            Some(Field::TargetAmount) => match category.direction {
                CategoryDirection::Expense => format!(
                    "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –ª–∏–º–∏—Ç–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏: {} {}*

*–¢–µ–∫—É—â–∏–π –ª–∏–º–∏—Ç:* {:?}

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤—É—é —Å—É–º–º—É \\(–∏–ª–∏ ¬´0¬ª –¥–ª—è —É–¥–∞–ª–µ–Ω–∏—è –ª–∏–º–∏—Ç–∞\\)\\._",
                    category.label,
                    category.name,
                    category.target_amount.unwrap_or(0),
                ),
                CategoryDirection::Income => format!(
                    "‚úèÔ∏è *–ò–∑–º–µ–Ω–µ–Ω–∏–µ –ø–ª–∞–Ω–∞*

*–ö–∞—Ç–µ–≥–æ—Ä–∏—è:* ¬´{} {}¬ª
*–¢–µ–∫—É—â–∏–π –ø–ª–∞–Ω:* {:?}

_–í–≤–µ–¥–∏—Ç–µ –Ω–æ–≤—É—é —Ü–µ–ª–µ–≤—É—é —Å—É–º–º—É \\(–∏–ª–∏ ¬´0¬ª –¥–ª—è —É–¥–∞–ª–µ–Ω–∏—è –ø–ª–∞–Ω–∞\\)\\._",
                    category.label,
                    category.name,
                    category.target_amount.unwrap_or(0),
                ),
                CategoryDirection::Unspecified => {
                    unreachable!()
                }
            },
            _ => {
                unreachable!()
            }
        })
    }

    async fn reply_markup(
        &self,
    ) -> Result<InlineKeyboardMarkup, Box<dyn std::error::Error + Send + Sync>> {
        Ok(
            InlineKeyboardMarkup::default().append_row(vec![InlineKeyboardButton::callback(
                "‚ùå –û—Ç–º–µ–Ω–∏—Ç—å",
                String::try_from(Callback {
                    query: Option::from(Query::CancelUpdateCategory(CancelUpdateCategory {})),
                })
                .unwrap(),
            )]),
        )
    }
}
