use crate::handlers::callback::MessageBuilder;
use crate::proto::callback::v1::callback::Query;
use crate::proto::callback::v1::{Callback, CategoryDirection, ShowCategoriesSettings};
use teloxide::types::{InlineKeyboardButton, InlineKeyboardMarkup};

pub struct ShowSettingsMessageBuilder {}

#[async_trait::async_trait]
impl MessageBuilder for ShowSettingsMessageBuilder {
    async fn text(&self) -> String {
        "âš™ï¸ Ð’Ñ‹Ð±ÐµÑ€Ð¸Ñ‚Ðµ Ñ€Ð°Ð·Ð´ÐµÐ» Ð½Ð°ÑÑ‚Ñ€Ð¾ÐµÐº".to_string().clone()
    }

    async fn reply_markup(&self) -> InlineKeyboardMarkup {
        const PAGE_SIZE: i64 = 8;
        InlineKeyboardMarkup::default().append_row(vec![
            InlineKeyboardButton::callback(
                "ðŸ“‰ Ð Ð°ÑÑ…Ð¾Ð´Ñ‹",
                String::try_from(Callback {
                    query: Option::from(Query::ShowCategoriesSettings(ShowCategoriesSettings {
                        category_direction: i32::from(CategoryDirection::Expense),
                        page: 0,
                        page_size: PAGE_SIZE,
                    })),
                })
                .unwrap(),
            ),
            InlineKeyboardButton::callback(
                "ðŸ“ˆ Ð”Ð¾Ñ…Ð¾Ð´Ñ‹",
                String::try_from(Callback {
                    query: Option::from(Query::ShowCategoriesSettings(ShowCategoriesSettings {
                        category_direction: i32::from(CategoryDirection::Income),
                        page: 0,
                        page_size: PAGE_SIZE,
                    })),
                })
                .unwrap(),
            ),
        ])
    }
}

impl ShowSettingsMessageBuilder {
    pub fn new() -> Self {
        ShowSettingsMessageBuilder {}
    }
}
